--- a/rpi5_baremetal_hello_uart/.cargo/config.toml
+++ b/rpi5_baremetal_hello_uart/.cargo/config.toml
@@ -1,8 +1,9 @@
-[target.aarch64-unknown-none]
-linker = "aarch64-linux-gnu-ld"
-runner = "./run.sh"
-
-rustflags = ["-C", "link-arg=-Taarch64.lds"]
+[unstable]
+build-std = ["core", "compiler_builtins"]
 
 [build]
 target = "aarch64-unknown-none"
+
+[target.aarch64-unknown-none]
+runner = "./run.sh"
+linker = "aarch64-linux-gnu-ld"
