[refactor] extract spinlock to a separate library

--- a/rpi5_baremetal_hello_uart/Cargo.toml
+++ b/rpi5_baremetal_hello_uart/Cargo.toml
@@ -1,9 +1,5 @@
 [workspace]
-members = [
-    "bootloader",
-    "dtb",
-    #"alloc"
-]
+members = ["alloc", "bootloader", "dtb", "mutex"]
 workspace.resolver = "3"
 build-std-features = ["compiler-builtins-mem"]
 
