--- a/rpi5_baremetal_hello_uart/.cargo/config.toml
+++ b/rpi5_baremetal_hello_uart/.cargo/config.toml
@@ -1,9 +1,15 @@
-[unstable]
-build-std = ["core", "compiler_builtins"]
+# 以下はコマンドラインで渡す
+# [unstable]
+# build-std = ["core", "compiler_builtins"]
 
-[build]
-target = "aarch64-unknown-none"
+# [build]
+# target = "aarch64-unknown-none"
 
 [target.aarch64-unknown-none]
-runner = "./run.sh"
-linker = "aarch64-linux-gnu-ld"
+# linker = "aarch64-linux-gnu-ld"
+
+[alias]
+xbuild = "xtask build"
+xrun = "xtask run"
+xtest = "xtask test"
+xtask = "run --package xtask --"
