--- a/rpi5_baremetal_hello_uart/Cargo.toml
+++ b/rpi5_baremetal_hello_uart/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["alloc", "bootloader", "dtb", "mutex"]
+members = ["alloc", "bootloader", "dtb", "mutex", "xtask"]
 workspace.resolver = "3"
 build-std-features = ["compiler-builtins-mem"]
 
